fix bug remove overflow from menu

--- a/src/stylesSass/2-base/_buttons.sass
+++ b/src/stylesSass/2-base/_buttons.sass
@@ -16,13 +16,13 @@
     top: 0
     background-color: $green
     transition: 0.5s
-    overflow-y: scroll
-    overflow-x: hidden
 
 .menu-content
     position: relative
-    top: 20%
     width: 100%
+    overflow: hidden
+    padding-top: 5rem
+
 
 .menu-content li,
 .menu-content li ul li
