--- a/styles/main.css
+++ b/styles/main.css
@@ -102,14 +102,13 @@ a {
   top: 0;
   background-color: #87c5be;
   transition: 0.5s;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 .menu-content {
   position: relative;
-  top: 20%;
   width: 100%;
+  overflow: hidden;
+  padding-top: 5rem;
 }
 
 .menu-content li,
@@ -534,6 +533,11 @@ img.image-top {
   background-color: #fab65e;
 }
 
+@media screen and (min-height: 500px) {
+  .menu-content {
+    padding-top: 30%;
+  }
+}
 @media screen and (min-width: 700px) {
   .grid {
     display: grid;
@@ -583,23 +587,20 @@ img.image-top {
     margin: 0;
   }
 
-  #menu {
+  #navigation-bar #menu {
     height: initial;
     width: 100%;
     position: relative;
     z-index: 1;
-    overflow-x: hidden;
     transition: 0.5s;
     flex-basis: auto;
     display: inline-flex;
-    overflow-y: hidden;
     background: transparent;
   }
 
   #menu ul {
     display: inline-flex;
     justify-content: flex-end;
-    height: min-content;
     padding-right: 0.5rem;
     align-items: center;
   }
@@ -612,6 +613,10 @@ img.image-top {
   #navigation-bar .menu-icon-container,
 #menu #close-button {
     display: none;
+  }
+
+  .menu-content {
+    padding-top: 0;
   }
 
   .menu-link {
